--- a/LEVEL-1/TASK-1/about.html
+++ b/LEVEL-1/TASK-1/about.html
@@ -28,7 +28,7 @@
             Whether it's crafting clean responsive web designs or diving into AI/ML projects, I love 
             blending creativity with logic. I belive tech should be exciting - so I make sure to 
             keep the fun alive while building things that matter. Looking to grow, collaborate and 
-            cretae work that's as impactful as it is professional.
+            create work that's as impactful as it is professional.
             </p1>
         </div>
         <hr class="section-divider"/>
