--- a/LEVEL-1/TASK-1/contacts.html
+++ b/LEVEL-1/TASK-1/contacts.html
@@ -21,11 +21,19 @@
         </div>
 
         <div class="contacts-secondary-head">
+            <h3>Follow on Socials</h3>
             <h4>Contact Info</h4>
         </div>
 
         <div class="contacts-info">
             <p1> Always available to collaborate on projects, journals<br> and papers. </p1>
+            <p2> Follow my socials to get updates on my work <br>and journey.</p2>
+        </div>
+
+        <div class="contact-info-sub">
+            <p><strong>LindekIn</strong></p>
+            <p><strong><br><br>Github<br></strong></p>
+            <p><strong><br><br>Instagram<br></strong></p>
         </div>
 
         <div class="contacts-info-main">
@@ -42,7 +50,14 @@
             <i class="fas fa-envelope"><br></i>
         </div>
 
+        <div class="contact-socials">
+            <a href="https://www.linkedin.com/in/devanandhana-p-s-21754a24b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"> <i class="fab fa-linkedin-in"></i> </a>
+            <a href="https://github.com/deva-nandhana15" target="_blank"> <i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/_d._va?igsh=aW05ams2Y3d3MDV1" target="_blank"> <i  class="fab fa-instagram"></i></a>
+        </div>
+
         <div class="vertical-divider"></div>
+        <div class="vertical-divider1"></div>
 
         <footer class="contacts-footer">
             <p1>Copyright &copy; 2025 Devanandhana. All Rights Reserved.</p1>
