--- a/LEVEL-1/TASK-1/index.html
+++ b/LEVEL-1/TASK-1/index.html
@@ -35,9 +35,9 @@
         </main>
 
         <div class="socials">
-            <a href="" target="_blank"> <i class="fab fa-linkedin-in"></i> </a>
+            <a href="https://www.linkedin.com/in/devanandhana-p-s-21754a24b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"> <i class="fab fa-linkedin-in"></i> </a>
             <a href="https://github.com/deva-nandhana15" target="_blank"> <i class="fab fa-github"></i></a>
-            <a href="" target="_blank"> <i  class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/_d._va?igsh=aW05ams2Y3d3MDV1" target="_blank"> <i  class="fab fa-instagram"></i></a>
         </div>
     </div>
     
