added remaining files

--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -99,7 +99,7 @@
 
             <section class="product-section">
                 <div class="product-section-title"><h2>T&nbsp;H&nbsp;E&nbsp;&nbsp;G&nbsp;L&nbsp;O&nbsp;W&nbsp;&nbsp;C&nbsp;O&nbsp;L&nbsp;L&nbsp;E&nbsp;C&nbsp;T&nbsp;I&nbsp;O&nbsp;N</h2></div>
-                <h2><a href="#">SKINCARE ESSENTIALS</a> </h2>
+                <h2><a href="skincare_page.html">SKINCARE ESSENTIALS</a> </h2>
                 <div class="product-row">
                     <div class="product-card">
                         <img src="assets/products/skincare products/sp7.jpg" alt="Serum 6">
@@ -159,8 +159,7 @@
                     </div>
                 </div>
 
-
-                <h2><a href="#">BODYCARE RITUALS</a></h2>
+                <h2><a href="bodycare_page.html">BODYCARE RITUALS</a></h2>
                 <div class="product-row">
                     <div class="product-card">
                         <img src="assets/products/bodycare products/1.webp" alt="Moisturizer 1">
@@ -242,7 +241,7 @@
                 </div>
 
 
-                <h2><a href="#">HAIRCARE HEROES</a></h2>
+                <h2><a href="haircare_page.html">HAIRCARE HEROES</a></h2>
                 <div class="product-row">
                     <div class="product-card">
                         <img src="assets/products/haircare products/1.jpg" alt="Shampoo">
