updated e-commerce website

--- a/LEVEL-1/TASK-2/haircare_page.html
+++ b/LEVEL-1/TASK-2/haircare_page.html
@@ -9,4 +9,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     </head>
 
+    <body>
+        <main>
+            <header>
+                <h1>L&nbsp;A&nbsp;&nbsp;&nbsp;L&nbsp;U&nbsp;E&nbsp;U&nbsp;R</h1>
+                <nav class="nav-links">
+                    <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                    <a href="#"><i class="far fa-heart"></i></a>
+                    <a href="#"><i class="fas fa-bars"></i></a>
+                </nav>
+            </header>
+        </main>
+    </body>
 </html>
