--- a/LEVEL-1/TASK-2/skincare_page.html
+++ b/LEVEL-1/TASK-2/skincare_page.html
@@ -10,7 +10,16 @@
     </head>
 
     <body>
-        
+        <main>
+            <header>
+                <h1>L&nbsp;A&nbsp;&nbsp;&nbsp;L&nbsp;U&nbsp;E&nbsp;U&nbsp;R</h1>
+                <nav class="nav-links">
+                    <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                    <a href="#"><i class="far fa-heart"></i></a>
+                    <a href="#"><i class="fas fa-bars"></i></a>
+                </nav>
+            </header>
+        </main>
     </body>
 
 </html>
