--- a/LEVEL-1/TASK-1/resume.html
+++ b/LEVEL-1/TASK-1/resume.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="dwnld-btn">
-            <a href="assets/resume.pdf" class="download-btn" download>
+            <a href="assets/Deva-Resume.pdf" class="download-btn" download>
             <i class="fas fa-download"></i>
             <span>Download CV</span>
             </a>
